--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "A multi functional whatsapp bot Web paircode.",
     "main": "index.js",
     "scripts": {
-      "start": "pm2 start index.js --deep-monitoring --attach --name Robin",
-      "stop": "pm2 stop robin",
-     "restart": "pm2 restart robin"
+      "start": "pm2 start index.js --deep-monitoring --attach --name Astron",
+      "stop": "pm2 stop Astron",
+     "restart": "pm2 restart Astron"
     },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.9",
